added some more basic html structure

--- a/index.html
+++ b/index.html
@@ -3,15 +3,48 @@
 <head>
   <title>Where to use SNAP, WIC, & DUFB in RVA</title>
   <meta charset="utf-8" />
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
+
 <div class="wrapper">
 
   <header>
 
+   <div class="titlebar">
+     Food for Health RVA
+   </div>
+
+    <div class="navbar">
+      <div class="map-button">
+        Map
+      </div>
+      <div class="list-button">
+        List
+      </div>
+    </div>
+
   </header>
-  <div id="container">
+
+  <div id="mainpanel">
+    <div class="mappanel">
+      <div class="searchbutton">
+        Q
+      </div>
+      <div class="mylocationbutton">
+        O
+      </div>
+      <div class="map"></div>
+    </div>
+    <div class="listpanel">
+      <div class="filterbutton">
+        <div class="filteroption">Option 1</div>
+        <div class="filteroption">Option 2</div>
+        <div class="filteroption">Option 3</div>
+      </div>
+    </div>
   </div>
 </div>
+
 </body>
 </html>
