--- a/index.html
+++ b/index.html
@@ -26,22 +26,29 @@
 
   </header>
 
-  <div id="mainpanel">
-    <div class="mappanel">
-      <div class="searchbutton">
+  <div class="main-panel">
+    <div class="map-panel">
+      <div class="search-button">
         Q
       </div>
-      <div class="mylocationbutton">
+      <div class="mylocation-button">
         O
       </div>
       <div class="map"></div>
     </div>
-    <div class="listpanel">
-      <div class="filterbutton">
-        <div class="filteroption">Option 1</div>
-        <div class="filteroption">Option 2</div>
-        <div class="filteroption">Option 3</div>
+    <div class="list-panel">
+      <div class="filter-button">
+        <div class="filter-option">Option 1</div>
+        <div class="filter-option">Option 2</div>
+        <div class="filter-option">Option 3</div>
       </div>
+      <ul class="vendor-list">
+        <li class="vendorlisting">Vendor 1</li>
+        <li class="vendorlisting">Vendor 2</li>
+        <li class="vendorlisting">Vendor 3</li>
+        <li class="vendorlisting">Vendor 4</li>
+        <li class="vendorlisting">Vendor 5</li>
+      </ul>
     </div>
   </div>
 </div>
