sorry, removed the bad code from the last commit :/

--- a/index.html
+++ b/index.html
@@ -26,14 +26,7 @@
 	    alert("Successfully processed!")
 	    console.log(data);
 
-	    for (i=0; i&<dataLength; i++) {
-	        $('').append(
-	          $('<li>', {
-	            text: data[i].politician + ', ' + data[i].position
-	          })
-	        );
-	      }
-	  	}
+	   
   </script>
 </head>
 <body>
@@ -53,7 +46,7 @@
       <div id="listButton">
         List
       </div>
-    </div>
+    </div>t
 
   </header>
 
