--- a/index.html
+++ b/index.html
@@ -8,26 +8,11 @@
   <!--Tabletop-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.4.2/tabletop.js"></script>
 
-  <!--JQuery-->
+  <!--JQuery
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  -->
 
-  <script type="text/javascript">
-  	 window.onload = function() { init() };
-
-	  var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1uu1PfCjgIrIVqzFoCN8iildL2yBYBfdR_4VEdf198tc/pubhtml';
-
-	  function init() {
-	    Tabletop.init( { key: public_spreadsheet_url,
-	                     callback: showInfo,
-	                     simpleSheet: true } )
-	  }
-
-	  function showInfo(data, tabletop) {
-	    alert("Successfully processed!")
-	    console.log(data);
-	    
-	  }
-  </script>
+  
 </head>
 <body>
 
@@ -78,4 +63,41 @@
 </div>
 
 </body>
+<script type="text/javascript">
+  	 window.onload = function() { init() };
+
+	  var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1uu1PfCjgIrIVqzFoCN8iildL2yBYBfdR_4VEdf198tc/pubhtml';
+
+	  function init() {
+	    Tabletop.init( { key: public_spreadsheet_url,
+	                     callback: showInfo,
+	                     simpleSheet: true } )
+	  }
+
+	  function showInfo(data, tabletop) {
+	    //alert("Successfully processed!")
+	    console.log(data);
+
+	    var dataLength = data.length;
+
+	    var list = document.getElementById('vendorList');
+	    
+	    for (i=0; i<dataLength; i++) {
+
+	    	list.innerHTML = list.innerHTML + "<li class='vendorlisting'>"
+	    									+ data[i].Name
+	    									+ "<br>"
+	    									+ data[i].Address
+	    									+ "</li>";
+
+
+
+	        // $('#vendorList').append(
+	        //   $('<li>', {
+	        //     text: data[i].Name + ', ' + data[i].Address
+	        //   })
+	        // );
+	     }
+	  }
+  </script>
 </html>
