--- a/index.html
+++ b/index.html
@@ -23,20 +23,11 @@
 
 <div class="wrapper">
 
-  <header id = "header" class = "col-9">
-   <div class="titlebar col-7">
+  <header id = "header" class = "col-12">
+     <div class="titlebar">
      Food for Health RVA
-   </div>
+        </div>
 
-    <div class="navbar col-3">
-      <div class="navButton">
-        <a href = "#">Map</a>
-      </div>
-      |
-      <div class="navButton">
-        <a href = "#">List</a>
-      </div>
-    </div>
 
   </header>
 
